// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormGroup should render 1`] = `
<div
  className="sc-AxjAm dsYsxv"
/>
`;

exports[`FormGroup should render with children 1`] = `
<div
  className="sc-AxjAm dsYsxv"
>
  Some child #1
  <div>
    Some child #2
  </div>
</div>
`;
